--- a/changelog.txt
+++ b/changelog.txt
@@ -9,3 +9,8 @@ V1.0.3
  - added badges in readme file
  - added CI workflow
  - corrected ATmega8 measurements
+
+V1.1.0 (03.06.2023)
+ - added internal _intref variable that has higher priority than the
+   EEPROM value
+ - added setIntref method that can be used ti set the value
