--- a/changelog.txt
+++ b/changelog.txt
@@ -1,24 +1,24 @@
-V1.0.1
+v1.0.1
  - initial version
 
-V1.0.2
+v1.0.2
  - fixed typo in conditional compilation
 
-V1.0.3
+v1.0.3
  - added a few missed MCUs
  - added badges in readme file
  - added CI workflow
  - corrected ATmega8 measurements
 
-V1.1.0 (03.06.2023)
+v1.1.0 (03.06.2023)
  - added internal _intref variable that has higher priority than the
    EEPROM value
  - added setIntref method that can be used to set the value
 
-V1.1.1 (03.06.2023)
+v1.1.1 (03.06.2023)
  - added keyword in keywords.txt
 
-V2.0.0 (25.06.2023)
+v2.0.0 (25.06.2023)
  - changed interface in EEPROM: E2END-3..E2END-2: intref (-1 meaning
    no value). The remaining values are used as follows: E2END-1: OSCCAL value is valid, E2END: OSCCAL
    calibration value. This is at least what the avrCalibrate library uses.
@@ -26,9 +26,12 @@ V2.0.0 (25.06.2023)
    meaningful results - more work is necessary here
  - added ATtiny26
 
-V2.1.0 (26.06.2023)
+v2.1.0 (26.06.2023)
  - added ATmega16, 32, 8535
 
-V2.2.0 (27.06.2023)
+v2.2.0 (27.06.2023)
  - new constant DEFAULT_INTREF, which is the default internal
    reference voltage
+
+v2.3.0 (31.12.2025)
+ - added a few more MCUs
